style.css
body {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 14px;
}

#title {
  font-weight: bold;
}

#story {

  padding-left: 810px;
  font-size: 14px;
}

button {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 14px;
}

select {
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 14px;
}

.d3-tip {
  line-height: 1;
  padding: 6px;
  background: rgba(240, 240, 240, 0.95);
  color: #333;
  border-radius: 4px;
  font-size: 12px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 1;
  color: rgba(240, 240, 240, 0.95);
  content: "\25BC";
  position: absolute;
  text-align: center;
}

/* Style northward tooltips specifically */
.d3-tip.n:after {
  margin: -2px 0 0 0;
  top: 100%;
  left: 0;
}

.d3-tip h5 {
  font-size: 13px;
  font-weight: 600;
  margin: 2px 10px 4px 2px;
}

.d3-tip th td {
  border-bottom: 1px solid #ccc;
  font-size: 10px;
  font-weight: 600;
}

.d3-tip td {
  padding: 2px 10px 2px 2px;
}

.d3-tip th tr {
  padding-top: 10px;
}

